image distortion fix

--- a/style_1-2.css
+++ b/style_1-2.css
@@ -264,7 +264,7 @@ textarea {
 
 .mySlides {
     display: none;
-    max-height: 500px;
+    max-height: 600px;
 }
 
 .slideshow-container {
@@ -279,7 +279,7 @@ textarea {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-height: 400px;
+    max-height: 500px;
 }
 
 .prev,
